<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokemon Database</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Retrieve Pokemon</string>
    <string name="placeholder1">Enter Pokemon\'s Name</string>
    <string name="placeholder2">Pokedex No. of your Opponent\'s Pokemon</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="ability">Ability:</string>
    <string name="hp">HP:</string>
    <string name="atk">Attack:</string>
    <string name="def">Defense:</string>
    <string name="spa">Sp. Atk:</string>
    <string name="spd">Sp.Def:</string>
    <string name="speed">Speed:</string>
    <string name="pokeImg">Pokemon image</string>
    <string name="moves">Moves</string>
    <string name="Res">Resist and Weakness</string>

</resources>
